<resources>
    <string name="app_name">Android小例子</string>
    <string name="text_title">微信</string>
    <string name="text_group">发起群聊</string>
    <string name="text_add">添加好友</string>
    <string name="text_sweep">扫一扫</string>
    <string name="text_collect">收付款</string>
    <string name="text_help">帮助与反馈</string>
    <string name="text_1">QQ钱包</string>
    <string name="text_2">个性装扮</string>
    <string name="text_3">我的收藏</string>
    <string name="text_4">我的相册</string>
    <string name="text_5">我的文件</string>
    <string name="text_6">我的日程</string>
    <string name="text_7">我的名片夹</string>
    <string name="text_btn1">子按钮1</string>
    <string name="text_btn2">子按钮2</string>
    <string name="text_btn3">子按钮3</string>
    <string name="text_btn4">子按钮4</string>
    <string name="text_btn5">子按钮5</string>
    <string name="text_title1">提示</string>
    <string name="text_title2">您确定要退出58同城吗？</string>
    <string name="text_btn_determine">确定</string>
    <string name="text_btn_cancel">取消</string>

    <string name="text_title_dialog">再连续登陆4天，就可变身QQ达人。退出\nQQ可能会使你现有记录归零，确定退\n出？</string>
    <string name="text_cancel">取消</string>
    <string name="text_exit">确定退出</string>
    <string name="text_exit_number">退出当前账号</string>

    <string name="slide_delete_name1">赵...</string>
    <string name="slide_delete_name2">孙...</string>
    <string name="slide_delete_name3">李...</string>
    <string name="slide_delete_name4">周...</string>
    <string name="slide_delete_name5">吴...</string>
    <string name="slide_delete_name6">郑...</string>
    <string name="slide_delete_name7">王...</string>
    <string name="slide_delete_name8">冯...</string>
    <string name="slide_delete_name9">陈...</string>
    <string name="slide_delete_name10">卫...</string>
    <string name="slide_delete_name11">沈...</string>

    <!--信息-->
    <string name="slide_delete_1">世上没有绝望的处境，只有对处境绝望的人。</string>
    <string name="slide_delete_2">大多数人想要改造这个世界，但却罕有人想改造自己。 </string>
    <string name="slide_delete_3">积极的人在每一次忧患中都看到一个机会， 而消极的人则在每个机会都看到某种忧患。</string>
    <string name="slide_delete_4">莫找借口失败，只找理由成功。</string>
    <string name="slide_delete_5">世上没有绝望的处境，只有对处境绝望的人。  </string>
    <string name="slide_delete_6">当你感到悲哀痛苦时，最好是去学些什么东西。学习会使你永远立于不败之地。</string>
    <string name="slide_delete_7">世界上那些最容易的事情中，拖延时间最不费力。 </string>
    <string name="slide_delete_8">人之所以能，是相信能。</string>
    <string name="slide_delete_9">一个有信念者所开发出的力量，大于99个只有兴趣者。 </string>
    <string name="slide_delete_10">每一发奋努力的背后，必有加倍的赏赐。</string>
    <string name="slide_delete_11">人生伟业的建立 ，不在能知，乃在能行。</string>
</resources>
