<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/mdialog_bg"
    android:orientation="vertical">
    <!--对话框标题区域-->
    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_title_dialog"
            android:textColor="@color/black" />

    </RelativeLayout>
    <!--对话框横线-->
    <View
        android:layout_width="@dimen/layout_width"
        android:layout_height="1dp"
        android:layout_below="@+id/layout_title"
        android:layout_marginBottom="10dp"
        android:background="@color/grey" />
    <!--对话框按钮区域-->
    <RelativeLayout
        android:id="@+id/bottomoll"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title">

        <LinearLayout
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content">
            <!--取消按钮-->
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/text_cancel"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />
            <!--退出按钮-->
            <Button
                android:id="@+id/btn_exit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/text_exit"
                android:textColor="@color/blue"
                android:textSize="18sp"

                />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>